# rs-mcp-tools

./: Cargo.toml  Makefile.toml
mcp-agent/: Cargo.toml
mcp-agent/src/: lib.rs  openai.rs
mcp-client/: Cargo.toml
mcp-client/src/clients/: io_client.rs  mod.rs  sse_client.rs
mcp-servers/fetch/: Cargo.toml
mcp-servers/sample-calculator/: Cargo.toml
mcp-servers/sample-calculator/src/: main.rs
mcp-servers/sample-calculator/src/servers/: mcp_io.rs  mcp_sse.rs  mod.rs
scripts/: create-new-server.sh
shared/src/: env.rs
