[package]
name = "mcp-client"
edition.workspace = true
license.workspace = true
publish.workspace = true
version.workspace = true

[dependencies]
anyhow.workspace = true
rmcp.workspace = true
tokio.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
derive-new.workspace = true
url.workspace = true
openai-tools.workspace = true
test-log.workspace = true
